[package]
name = "bm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.22", features = ["serde"] }
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
